<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.login.LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_login_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/message"
        android:drawablePadding="16dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <com.aurelioklv.dicodingstoryapp.presentation.utils.CustomEditText
        android:id="@+id/ed_login_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        android:autofillHints="password"
        android:background="@drawable/custom_edittext"
        android:drawablePadding="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="@id/ed_login_email"
        app:layout_constraintStart_toStartOf="@id/ed_login_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/custom_button"
        android:enabled="true"
        android:text="@string/login"
        android:textColor="@color/bg"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_account"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_redirect_register"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/tv_redirect_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/register"
        android:textColor="@color/green3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dont_have_account"
        app:layout_constraintTop_toTopOf="@id/dont_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>